--- a/mustHaveJsp/src/main/webapp/WEB-INF/web.xml
+++ b/mustHaveJsp/src/main/webapp/WEB-INF/web.xml
@@ -41,6 +41,37 @@
   	<param-value>5</param-value>
   </context-param>
   
+  <servlet><!-- 서블릿 등록 -->
+  	<servlet-name>HelloServlet</servlet-name>
+  	<servlet-class>servlet.HelloServlet</servlet-class>
+  </servlet>
+  <servlet-mapping><!-- 서블릿과 요청명(요청URL)을 매핑 -->
+  	<servlet-name>HelloServlet</servlet-name>
+  	<url-pattern>/12Servlet/HelloServlet.do</url-pattern>
+  </servlet-mapping>
+  
+  <servlet><!-- 서블릿 등록 -->
+  	<servlet-name>DirectServletPrint</servlet-name>
+  	<servlet-class>servlet.DirectServletPrint</servlet-class>
+  </servlet>
+  <servlet-mapping><!-- 서블릿과 요청명(요청URL)을 매핑 -->
+  	<servlet-name>DirectServletPrint</servlet-name>
+  	<url-pattern>/12Servlet/DirectServletPrint.do</url-pattern>
+  </servlet-mapping>
+  
+  <servlet><!-- 서블릿 등록 -->
+  	<servlet-name>MemberAuth</servlet-name>
+  	<servlet-class>servlet.MemberAuth</servlet-class>
+  	<init-param>
+  		<param-name>admin_id</param-name>
+  		<param-value>nakja</param-value>
+  	</init-param>
+  </servlet>
+  <servlet-mapping><!-- 서블릿과 요청명(요청URL)을 매핑 -->
+  	<servlet-name>MemberAuth</servlet-name>
+  	<url-pattern>/12Servlet/MemberAuth.mvc</url-pattern>
+  </servlet-mapping>
+  
 <!--   <error-page> -->
 <!--   	<error-code>404</error-code> -->
 <!--   	<location>/02ImplicitObject/Exception.jsp</location> -->
