--- a/ServletStudy/src/main/webapp/WEB-INF/web.xml
+++ b/ServletStudy/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,23 @@
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
   
+  <context-param>
+  	<param-name>MySQLDriver</param-name>
+  	<param-value>com.mysql.cj.jdbc.Driver</param-value>
+  </context-param>
+  <context-param>
+  	<param-name>MySQLURL</param-name>
+  	<param-value>jdbc:mysql://localhost:3306/musthave</param-value>
+  </context-param>
+  <context-param>
+  	<param-name>MySQLID</param-name>
+  	<param-value>musthave</param-value>
+  </context-param>
+  <context-param>
+  	<param-name>MySQLPwd</param-name>
+  	<param-value>tiger</param-value>
+  </context-param>
+  
   <servlet>
   	<servlet-name>MyServlet01</servlet-name>
   	<servlet-class>edu.pnu.servlet.MyServlet01</servlet-class>
